# ironscribe

./: .gitignore  Cargo.toml  Cargo.toml.bak  Dioxus.toml  Justfile  README.md  build.rs  flake.nix  hotdog.db  metadata_backup.db  rust-toolchain.toml  sample.json  schema.sql
.direnv/: flake-profile-1-link  flake-profile-3-link  flake-profile-4-link
.github/workflows/: rust.yml
api/: Cargo.toml  README.md
api/src/: config.rs  database.rs  lib.rs
assets/: main.css
backend/: Cargo.toml  README.md
backend/src/: config.rs  database.rs  lib.rs  main.rs
client/: Cargo.toml  index.html
client/src/: app.rs  client.rs  db.rs  file_client.rs  lib.rs  main.rs  newfilesync.rs
common/: Cargo.toml
core/: Cargo.toml
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
ironscribe-common/: Cargo.toml  build.rs
proto/: Cargo.toml  booksync.proto  filesync.proto  filetransfer.proto
proto/proto/: file_service.proto
protobuf/: Cargo.toml  build.rs
server/: Cargo.toml
server/src/: file_service.rs  lib.rs  main.rs  newfilesync.rs
serverbin/: Cargo.toml
serverbin/src/: main.rs
serverlib/: Cargo.toml
shared/: Cargo.toml  README.md  build.rs
shared/proto/: filesync.proto  newfilesync.proto
shared/src/: errors.rs  filesystem.rs  gui.rs  lib.rs  types.rs
src/: backend.rs  client.rs  config.rs  filetransfer-client.rs  filetransfer-server.rs  gpt-client.rs  gpt-server.rs  grpc.rs  main.rs  rest.rs  server.rs  shared.rs  types.rs
src/backend/: config.rs  database.rs  mod.rs
src/components/: books.rs  favorites.rs  mod.rs  nav.rs  path_picker.rs
src/config/: api.rs  mod.rs  service.rs
src/database/: api.rs  connection.rs  mod.rs  models.rs
src/database/migrations/: schema.sql
src/frontend/components/: app.rs  books.rs  mod.rs  path_picker.rs
src/services/: config.rs  database.rs  schema.sql
src/shared/: mod.rs  types.rs
ui/: Cargo.toml  README.md
ui/assets/: main.css
ui/src/: app.rs  books.rs  lib.rs  path_picker.rs
web/: Cargo.toml  README.md
web/src/: main.rs
