[workspace]
resolver = "2"
members = ["ui", "web", "desktop", "api", "serverbin", "serverlib", "shared"]

[workspace.dependencies]
dioxus = { version = "0.6.0" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.143" }
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
anyhow = "1.0.99"
directories = "6.0.0"
tracing = "0.1.41"
once_cell = { version = "1.21.3" }
chrono = { version = "0.4.41", features = ["serde"] }
itertools = { version = "0.14.0" }
tokio = { version = "1.47.1" }
axum = { version = "0.8.4" }

ui = { path = "ui" }
api = { path = "api" }
serverlib = { path = "serverlib" }
serverbin = { path = "serverbin" }
shared = { path = "shared" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
