[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
backend = { workspace = true, optional = true }

[features]
default = []
# Enable this feature for server builds to pull in the backend crate.
server = ["backend"]
