[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { workspace = true }
serde_json = { workspace = true }
shared = { workspace = true }
backend = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
