[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
