[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { workspace = true }
ui = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
dioxus = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
directories = { workspace = true }
tracing = { workspace = true }
once_cell = { workspace = true }
axum = { workspace = true }
