[package]
name = "serverbin"
version = "0.1.0"
edition = "2021"

[dependencies]
ui = { workspace = true }
serverlib = { workspace = true }
tokio = { workspace = true }
dioxus = { workspace = true, features = ["fullstack"] }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
