[package]
name = "shared"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.32.0"
eframe = { version = "0.32.0", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence", "x11", "wayland"]}
log = "0.4.27"
serde = {version = "1.0.219", features = ["derive"]}
